--- a/reportlist.html
+++ b/reportlist.html
@@ -28,12 +28,11 @@
             </button>
             <a class="navbar-brand" href="#">天津师范大学心理危机管理系统</a>
             <ul class="user-menu">
-                <li class="dropdown pull-right">
+                <li class=" pull-right">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span
-                            class="glyphicon glyphicon-user"></span> 学院管理员 <span class="caret"></span></a>
-                    <ul class="dropdown-menu" role="menu">
-                        <li><a href="#"><span class="glyphicon glyphicon-log-out"></span>注销</a></li>
-                    </ul>
+                            class="glyphicon glyphicon-user"></span>&nbsp;<?php echo $sf; ?>&nbsp;&nbsp;:&nbsp;&nbsp;<?php echo $username; ?>
+                    </a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="logout.php"><span
+                        class="glyphicon glyphicon-log-out"></span>注销</a>
                 </li>
             </ul>
         </div>
@@ -42,12 +41,12 @@
 
 <div id="sidebar-collapse" class="col-sm-3 col-lg-2 sidebar">
     <ul class="nav menu">
-        <li><a href="index.html"><span class="glyphicon glyphicon-user"></span>个案信息</a></li>
-        <li><a href="create.html"><span class="glyphicon glyphicon-heart"></span>心理评估</a></li>
-        <li class="active"><a href="makereport.php"><span class="glyphicon glyphicon-stats"></span>录入上报表</a></li>
-        <li><a href="tables.html"><span class="glyphicon glyphicon-magnet"></span>干预后追踪</a></li>
-        <li><a href="forms.html"><span class="glyphicon glyphicon-list-alt"></span>预警库</a></li>
-        <li><a href="panels.html"><span class="glyphicon glyphicon-info-sign"></span>帮助信息</a></li>
+        <li><a href="stulist.php"><span class="glyphicon glyphicon-user"></span>个案信息</a></li>
+        <li><a href="scales.php"><span class="glyphicon glyphicon-heart"></span>心理评估</a></li>
+        <li class="active"><a href="reportlist.php"><span class="glyphicon glyphicon-stats"></span>录入上报表</a></li>
+        <li><a href="scales2.php"><span class="glyphicon glyphicon-magnet"></span>干预后追踪</a></li>
+        <li><a href="indanger.php"><span class="glyphicon glyphicon-list-alt"></span>预警库</a></li>
+        <li><a href="helpinfo.php"><span class="glyphicon glyphicon-info-sign"></span>帮助信息</a></li>
     </ul>
 </div><!--/.sidebar-->
 
