--- a/helpinfo.html
+++ b/helpinfo.html
@@ -42,9 +42,9 @@
 <div id="sidebar-collapse" class="col-sm-3 col-lg-2 sidebar">
     <ul class="nav menu">
         <li><a href="stulist.php"><span class="glyphicon glyphicon-user"></span>个案信息</a></li>
-        <li><a href="scales.php"><span class="glyphicon glyphicon-heart"></span>心理评估</a></li>
+        <li><a href="stulistforxlpg.php"><span class="glyphicon glyphicon-heart"></span>心理评估</a></li>
         <li><a href="reportlist.php"><span class="glyphicon glyphicon-stats"></span>录入上报表</a></li>
-        <li><a href="scales2.php"><span class="glyphicon glyphicon-magnet"></span>干预后追踪</a></li>
+        <li><a href="stulistforgyhzz.php"><span class="glyphicon glyphicon-magnet"></span>干预后追踪</a></li>
         <li><a href="indanger.php"><span class="glyphicon glyphicon-list-alt"></span>预警库</a></li>
         <li class="active"><a href="helpinfo.php"><span class="glyphicon glyphicon-info-sign"></span>帮助信息</a></li>
     </ul>
@@ -54,52 +54,23 @@
     <div class="row">
         <ol class="breadcrumb">
             <li><a href="#"><span class="glyphicon glyphicon-home"></span></a></li>
-            <li class="active">个案信息</li>
+            <li class="active">帮助信息</li>
         </ol>
     </div><!--/.row-->
 
     <div class="row">
         <div class="col-lg-12">
-            <h3 class="page-header">个案信息</h3>
+            <h3 class="page-header">帮助信息</h3>
         </div>
     </div><!--/.row-->
 
 
     <div class="row helpinfo">
-        <div class="col-lg-12">
-            <h2>Basic Panels</h2>
-        </div>
-        <div class="col-md-8">
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    Default Panel
-                </div>
-                <div class="panel-body">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque ut ante in sapien blandit
-                        luctus sed ut lacus. Phasellus urna est, faucibus nec ultrices placerat, feugiat et ligula.
-                        Donec vestibulum magna a dui pharetra molestie. Fusce et dui urna.
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque ut ante in sapien blandit
-                        luctus sed ut lacus. Phasellus urna est, faucibus nec ultrices placerat, feugiat et ligula.
-                        Donec vestibulum magna a dui pharetra molestie. Fusce et dui urna.</p>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-4">
-            <div class="panel panel-success">
-                <div class="panel-heading">
-                    Success Panel
-                </div>
-                <div class="panel-body">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque ut ante in sapien blandit
-                        luctus sed ut lacus. Phasellus urna est, faucibus nec ultrices placerat, feugiat et ligula.
-                        Donec vestibulum magna a dui pharetra molestie. Fusce et dui urna.</p>
-                </div>
-            </div>
-        </div>
+
         <div class="col-md-10">
             <div class="panel panel-info">
                 <div class="panel-heading">
-                    Default Panel
+                    使用说明
                 </div>
                 <div class="panel-body">
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque ut ante in sapien blandit
@@ -114,6 +85,14 @@
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque ut ante in sapien blandit
                         luctus sed ut lacus. Phasellus urna est, faucibus nec ultrices placerat, feugiat et ligula.
                         Donec vestibulum magna a dui pharetra molestie. Fusce et dui urna.</p>
+
+                </div>
+            </div>
+            <div class="panel panel-success">
+                <div class="panel-heading">
+                    常见问题
+                </div>
+                <div class="panel-body">
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque ut ante in sapien blandit
                         luctus sed ut lacus. Phasellus urna est, faucibus nec ultrices placerat, feugiat et ligula.
                         Donec vestibulum magna a dui pharetra molestie. Fusce et dui urna.
@@ -126,6 +105,7 @@
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque ut ante in sapien blandit
                         luctus sed ut lacus. Phasellus urna est, faucibus nec ultrices placerat, feugiat et ligula.
                         Donec vestibulum magna a dui pharetra molestie. Fusce et dui urna.</p>
+
                 </div>
             </div>
         </div>
