--- a/login.html
+++ b/login.html
@@ -47,10 +47,16 @@
                     </div>
                     <div class="form-group">
                         <div class="col-sm-offset-2 col-sm-10">
-                            <button type="submit" class="btn btn-default">登录</button>
+                            <button type="submit" class="btn btn-info">登录</button>
                         </div>
                     </div>
+                    <div style="padding: 10px;">
+                        <p>测试账号：</p>
+                        <p>管理员：admin admin</p>
+                        <p>学院管理员：李斯 123456</p>
+                        <p>心理委员：1630030100 123456</p>
 
+                    </div>
                 </form>
             </div>
         </div>
