--- a/scales2.html
+++ b/scales2.html
@@ -42,9 +42,9 @@
 <div id="sidebar-collapse" class="col-sm-3 col-lg-2 sidebar">
     <ul class="nav menu">
         <li><a href="stulist.php"><span class="glyphicon glyphicon-user"></span>个案信息</a></li>
-        <li><a href="scales.php"><span class="glyphicon glyphicon-heart"></span>心理评估</a></li>
+        <li><a href="stulistforxlpg.php"><span class="glyphicon glyphicon-heart"></span>心理评估</a></li>
         <li><a href="reportlist.php"><span class="glyphicon glyphicon-stats"></span>录入上报表</a></li>
-        <li class="active"><a href="scales2.php"><span class="glyphicon glyphicon-magnet"></span>干预后追踪</a></li>
+        <li class="active"><a href="stulistforgyhzz.php"><span class="glyphicon glyphicon-magnet"></span>干预后追踪</a></li>
         <li><a href="indanger.php"><span class="glyphicon glyphicon-list-alt"></span>预警库</a></li>
         <li><a href="helpinfo.php"><span class="glyphicon glyphicon-info-sign"></span>帮助信息</a></li>
     </ul>
@@ -54,13 +54,13 @@
     <div class="row">
         <ol class="breadcrumb">
             <li><a href="#"><span class="glyphicon glyphicon-home"></span></a></li>
-            <li class="active">心理评估</li>
+            <li class="active">干预后追踪</li>
         </ol>
     </div><!--/.row-->
 
     <div class="row">
         <div class="col-lg-12">
-            <h3 class="page-header">心理评估量表填写</h3>
+            <h3 class="page-header">干预后追踪</h3>
         </div>
     </div><!--/.row-->
 
