--- a/makereport.html
+++ b/makereport.html
@@ -42,9 +42,9 @@
 <div id="sidebar-collapse" class="col-sm-3 col-lg-2 sidebar">
     <ul class="nav menu">
         <li><a href="stulist.php"><span class="glyphicon glyphicon-user"></span>个案信息</a></li>
-        <li><a href="scales.php"><span class="glyphicon glyphicon-heart"></span>心理评估</a></li>
+        <li><a href="stulistforxlpg.php"><span class="glyphicon glyphicon-heart"></span>心理评估</a></li>
         <li class="active"><a href="reportlist.php"><span class="glyphicon glyphicon-stats"></span>录入上报表</a></li>
-        <li><a href="scales2.php"><span class="glyphicon glyphicon-magnet"></span>干预后追踪</a></li>
+        <li><a href="stulistforgyhzz.php"><span class="glyphicon glyphicon-magnet"></span>干预后追踪</a></li>
         <li><a href="indanger.php"><span class="glyphicon glyphicon-list-alt"></span>预警库</a></li>
         <li><a href="helpinfo.php"><span class="glyphicon glyphicon-info-sign"></span>帮助信息</a></li>
     </ul>
@@ -70,7 +70,7 @@
             <div class="panel panel-default">
                 <form action="" method="post">
                     <div class="panel-heading">
-                        学院上报情况说明:
+                        学院上报情况说明:(请直接以该生开头)
                     </div>
                     <div class="panel-body">
                         <textarea name="xysb" id="xysb" class="form-control" cols="90" rows="10"></textarea>
@@ -83,7 +83,7 @@
                                                                        name="reporttel">
                         </div>
                         <div class="form-group">
-                            <label for="reporttime">时间：</label><input type="text" class="form-control" id="reporttime"
+                            <label for="reporttime">时间：(例如2017-10-9)</label><input type="text" class="form-control" id="reporttime"
                                                                       name="reporttime">
                         </div>
                         <div style="text-align: center">
