--- a/scaletest7.html
+++ b/scaletest7.html
@@ -131,9 +131,9 @@
 <div id="sidebar-collapse" class="col-sm-3 col-lg-2 sidebar">
     <ul class="nav menu">
         <li><a href="stulist.php"><span class="glyphicon glyphicon-user"></span>个案信息</a></li>
-        <li class="active"><a href="scales.php"><span class="glyphicon glyphicon-heart"></span>心理评估</a></li>
+        <li class="active"><a href="stulistforxlpg.php"><span class="glyphicon glyphicon-heart"></span>心理评估</a></li>
         <li><a href="reportlist.php"><span class="glyphicon glyphicon-stats"></span>录入上报表</a></li>
-        <li><a href="scales2.php"><span class="glyphicon glyphicon-magnet"></span>干预后追踪</a></li>
+        <li><a href="stulistforgyhzz.php"><span class="glyphicon glyphicon-magnet"></span>干预后追踪</a></li>
         <li><a href="indanger.php"><span class="glyphicon glyphicon-list-alt"></span>预警库</a></li>
         <li><a href="helpinfo.php"><span class="glyphicon glyphicon-info-sign"></span>帮助信息</a></li>
     </ul>
