--- a/stulistforxlpg.html
+++ b/stulistforxlpg.html
@@ -45,10 +45,10 @@
 
 <div id="sidebar-collapse" class="col-sm-3 col-lg-2 sidebar">
     <ul class="nav menu">
-        <li class="active"><a href="stulist.php"><span class="glyphicon glyphicon-user"></span>个案信息</a></li>
-        <li><a href="scales.php"><span class="glyphicon glyphicon-heart"></span>心理评估</a></li>
+        <li><a href="stulist.php"><span class="glyphicon glyphicon-user"></span>个案信息</a></li>
+        <li class="active"><a href="stulistforxlpg.php"><span class="glyphicon glyphicon-heart"></span>心理评估</a></li>
         <li><a href="reportlist.php"><span class="glyphicon glyphicon-stats"></span>录入上报表</a></li>
-        <li><a href="scales2.php"><span class="glyphicon glyphicon-magnet"></span>干预后追踪</a></li>
+        <li><a href="stulistforgyhzz.php"><span class="glyphicon glyphicon-magnet"></span>干预后追踪</a></li>
         <li><a href="indanger.php"><span class="glyphicon glyphicon-list-alt"></span>预警库</a></li>
         <li><a href="helpinfo.php"><span class="glyphicon glyphicon-info-sign"></span>帮助信息</a></li>
     </ul>
@@ -244,25 +244,9 @@
                             <td>
                                 <?php echo $v['totalscore'];?>
                             </td>
-                            <td><a href="<?php echo './stucaseinfo.php?snum='.$v['stunum'] ?>"
-                                   class="btn btn-info">查看</a>
-                                <a href="<?php echo './stuedit.php?snum='.$v['stunum'] ?>"
-                                    class="btn btn-warning">编辑</a>
-                                <?php if($v['totalscore']<10){ ?>
-                                <a href="<?php echo './stucaseinfo.php?snum='.$v['stunum'] ?>"
-                                   class="btn btn-success">加入预警库</a>
-                                <?php }
-                                else if ($v['totalscore']>=10){
-                                ?>
-                                <a href="<?php echo './stucaseinfo.php?snum='.$v['stunum'] ?>"
-                                   class="btn btn-danger">预警</a>
-                                <?php }
-                                ?>
-                                <!--
+                            <td>
                                 <a href="<?php echo './scales.php?snum='.$v['stunum'] ?>"
                                         class="btn btn-warning">填写评估量表</a>
-                                <a href="<?php echo './stucaseinfo.php?snum='.$v['stunum'] ?>"
-                                   class="btn btn-info">填写干预后追踪量表</a>-->
                                 <span
                                         class="isok glyphicon glyphicon-ok"
                                         style="color: #5cb85c; display: none;"></span></td>
